Added task count, toggle hide completed tasks

--- a/simple-todos.html
+++ b/simple-todos.html
@@ -1,12 +1,15 @@
 <head>
-  <title>To-do List</title>
+  <title>Wei-Yin's To-do List</title>
 </head>
 
 <body>
 	<div class = "container">
 		<header>
-			<h1>To-do List</h1>
-		
+			<h1>To-do List: {{incompleteCount}}</h1>
+			<label class = "hide-completed">
+				<input type = "checkbox" checked ="{{hideCompleted}}" />
+				Hide Completed Tasks
+			</label>
 			<form class = "new-task">
 				<input type = "text" name = "text" placeholder = "Type to add new tasks" />
 			</form>
